<resources>
    <string name="app_name">GoodVibe</string>
    <string name="btn_usage_permission">Request permission</string>
    <string name="btn_service_start">Start Service</string>
    <string name="usage_permission_granted">Application has been successfully granted usage stats permission.</string>
    <string name="usage_permission_explanation">Click to request usage stats permission.
        This permission is needed to begin background service. You only need to do this once.</string>
    <string name="stop_service">Tap to exit from experiment.</string>
    <string name="service_started">Monitoring started.</string>
    <string name="label_set_limit">Set Daily Limit</string>
    <string name="tv_limit_fb">Facebook</string>
    <string name="tv_limit_gmail">Gmail</string>
    <string name="form_submit">Lock Until Midnight</string>
    <string name="tv_init_setup">Start Monitor Service</string>
    <string name="submission_done">You cannot change values until midnight.</string>
    <string name="max_minutes">max minutes</string>
    <string name="max_opens">max opens</string>
    <string name="fb_limit_prompt">Tap <b>Start Service</b> then follow instructions on website.
        If successfully set up, you will be to join experiment and your code will appear below.</string>
    <string name="btn_mturk_label">Submit ID</string>
    <string name="et_mturk_id_prompt">Enter your ID</string>
    <string name="mturk_submit_feedback">Successfully Submitted.</string>
    <string name="mturk_submit_failed">Error submitting worker id. Contact researcher.</string>
    <string name="btn_stop_service">Stop Service</string>
    <string name="yes">yes</string>
    <string name="title_confirm_id">Confirm Submission</string>
    <string name="message_confirm_id">Are you sure you entered correct ID? This cannot be changed once submitted.</string>
    <string name="et_study_code">Type your study code</string>
    <string name="mturk_code">mturk</string>

    <string name="app_about">Goodvibe app helps you manage your digital consumption using techniques
        grounded in Behavioral Science.
    </string>
    <string name="app_participant_msg">
        This app saves your phone habits (apps used and screen events)
        in a secured server. All data will inform the design of effective behavioral techniques in the future.
        By using this app, you contribute to the advancement of scientific research
        on curbing technology overuse.
    </string>
    <string name="about_sdl_lab">
        Goodvibe is designed by Small Data Lab at Cornell Tech, New York, USA.
        More info about the lab at https://smalldata.io
    </string>
</resources>
