<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/tv_permission_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/usage_permission_explanation"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_usage_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_usage_permission" />

        <TextView
            android:id="@+id/tv_how_to_conn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_set_limit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:text="@string/label_set_limit"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <View style="@style/Divider" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/tv_limit_fb"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/et_limit_time_fb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:ems="10"
            android:hint="@string/max_minutes"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />

        <EditText
            android:id="@+id/et_limit_opened_fb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:ems="10"
            android:hint="@string/max_opens"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/tv_limit_gmail"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/et_limit_time_gm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:ems="10"
            android:hint="@string/max_minutes"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />

        <EditText
            android:id="@+id/et_limit_opened_gm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:hint="@string/max_opens"
            android:ems="10"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_submit"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="5"
                android:text="@string/form_submit" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_check_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_weight="0.25"
        android:text="@string/tv_init_setup"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/btn_service_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_service_start" />

</LinearLayout>